--- a/12_flask-forms/templates/response.html
+++ b/12_flask-forms/templates/response.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--
-Metamorphosis: Eric, Yuki, Maya
+Metamorphosis: Eric Sohel, Yuki Feng, Maya Mori, Aleksandra Shifrina
 Softdev
 k12 -- GET vs. POST, displaying form responses
 2022-10-17
