--- a/19_session/templates/response.html
+++ b/19_session/templates/response.html
@@ -1,3 +1,11 @@
+<!-- 
+Metamorphosis: Eric Sohel, Yuki Feng, Maya Mori, Aleksandra Shifrina
+Softdev
+k19 -- sessions in Flask
+2022-11-04
+time spent: 2.0
+ -->
+ 
 <!DOCTYPE html>
 <html>
 
@@ -6,21 +14,12 @@
   </head>
 
   <body>
-    <h3> Yay {{ username }}</h3>
-    <h1>
-      Welcome, Travelers of the Intertoobz!
-    </h1>
-
+    <h1> Metamorphosis: Eric, Yuki, Maya, Sasha</h1>
+    <h1> Welcome {{ username }}! You are logged in!</h1>
     <br>
 
     <form action="/logout", method = "POST">
-      <!-- <input type="text" name="username">
-        {%if good_password != password %}
-        <h2> ERROR!</h2>
-        {% endif %}
-      <br>
-      <input type="text" name="password"> -->
-      <input type="submit" name="log out">
+      <input type="submit" value="Log out">
     </form>
   </body>
 
